<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_weight="1">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/a1_et1"
            android:hint="@string/search"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_weight="8"
            tools:ignore="NestedWeights" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/go"
            android:textSize="25sp"
            android:id="@+id/a1_b1" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/a1_ll1"
            android:orientation="vertical">

        </LinearLayout>


    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="end"
        android:text="@string/add_contacts"
        android:textSize="40sp"
        android:id="@+id/a1_b2" />


</LinearLayout>